--- a/src/components/Friend-list/friendList.module.css
+++ b/src/components/Friend-list/friendList.module.css
@@ -4,5 +4,5 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
-    background-color: #eb8c91;
+    background-color: #e4c6c8;
   }
