--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -28,14 +28,14 @@
     border: 2px solid #c9c3c3;
     border-radius: 50%;
     margin-bottom: 20px;
-    width: 80px;
+    width: 100px;
   }
   .name {
     font-weight: 700;
   }
   .stats {
     background-color: rgb(208, 39, 230);
-    width: 240px;
+    width: 100%;
     text-decoration: none;
     display: flex;
     justify-content: space-between;
@@ -49,9 +49,10 @@
   .stats li {
     display: inline-flex;
     flex-direction: column;
+    width: 100%;
     padding: 10px;
     background-color: rgb(243, 170, 243);
-    border-radius: 4px;
+    border-radius: 2px;
   }
   .label {
     font-weight: 700;
